--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -27,6 +27,8 @@
              <Button text="Download" press="onDownload" />
              <ToolbarSpacer />
              <Button text="Copy" press="onCopy" />
+             <ToolbarSpacer />
+             <Button text="Toggle Format" press="onToggleFormat" />      
             </HBox>
 
             
